# TimePix3DosimetricLibrary

./: .gitmodules  LICENSE  README.md
.github/workflows/: build.yml
Tpx3Dosi/: .gitignore  CMakeLists.txt
Tpx3Dosi/include/: ClusterTypes.h  Clusterings.h  GeometryTypes.h  KatherineTimepix3.h  KatherineTpx3.h  MultiplattformNetwork.h  MultiplattformTypes.h  OpenCLTypes.h  PixelClusterer.h  PixelIntegrator.h  PixelSorter.h  PostprocessingThread.h  RadiationAngleReconstructor.h  SYCLTypes.h  SegmentDataProcessingThread.h  Sorts.h  TimepixDataCLProc.h  TimepixTypes.h  Tpx3AlgorithmStatistics.h  Tpx3DosageMeasurement.h  Tpx3Dosemeter.h  TpxSimulation.h  libkatherinetpx.h  unistd.h
Tpx3Dosi/src/: KatherineTimepix3.cpp  PixelClusterer.cpp  PixelIntegrator.cpp  PixelSorter.cpp  PostprocessingThread.cpp  RadiationAngleReconstructor.cpp  SegmentDataProcessingThread.cpp  TimepixDataCLProc.cpp  Tpx3AlgorithmStatistics.cpp  Tpx3DosageMeasurement.cpp  Tpx3Dosemeter.cpp  libkatherinetpx.cpp
Tpx3Dosi/src/opencl/: DebugColoring.cl  OpenCLTest.cl  PixelClustering.cl  PixelIntegrator.cl  ShadowAngleFinder.cl  shadowProjection.cl
Tpx3Dosi/src/opencl/include/: Matrix.clh  OCLGeometryTypes.clh  OCLPixelTypes.clh  OCLRandom.clh  OCLShadowTypes.clh
